--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-US">
+  
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,inital-scale=1.0" />
     <title>Boyd Armor Poblete | WDD130</title>
+    <meta name="description" content="Welcome to Web Fundamentals. The purpose of this page is for me to pass this course with flying colours.">
+    <meta name="author" content="Boyd Poblete">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
+
   <body>
     <header>
       <nav>
@@ -14,13 +18,22 @@
       <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
       </nav>
     </header>
+
     <main>
       <h1>Boyd Armor Poblete | WDD130</h1>
       <img src="images/profile.jpg" alt="Hi, I'm Boyd Armor" width="200">
       <p>My name is Boyd Poblete. I am from the Philippines. I enjoy doing outdoor activites and hanging out with my friends.</p>
     </main>
+
+    <aside>
+      <h2>Philippines</h2>
+      <img src="images/ph.jpg" alt="promised isLAND">
+      <p>The Philippines is an archipelago. An archipelago is a group of islands. The Philippines is divided into 3 major islands namely Luzon, Visayas and Mindanao</p>
+    </aside>
+
     <footer>
       <p>©2023 🐱‍🏍Boyd Armor Poblete 🐱‍🏍 Philippines </p>
     </footer>
   </body>
+  phi
 </html>
