--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,inital-scale=1.0">
     <title>Boyd Armor Poblete | WDD130</title>
     <meta name="description" content="Welcome to Web Fundamentals. The purpose of this page is for me to pass this course with flying colours.">
