--- a/index.html
+++ b/index.html
@@ -16,16 +16,27 @@
       <a href="#">Home</a>
       <a href="wwr/">White Water Rafting Website</a>
       <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+      <a href="https://www.linkedin.com/in/boydpoblete/">linkedin</a>
+      <a href="https://www.facebook.com/budyooong">Facebook</a>
       </nav>
     </header>
 
     <main>
       <h1>Boyd Armor Poblete | WDD130</h1>
       <img src="images/profile.jpg" alt="Hi, I'm Boyd Armor" width="200">
-      <p>My name is Boyd Poblete. I am from the Philippines. I enjoy doing outdoor activites and hanging out with my friends.</p>
+      <p>My name is Boyd Poblete. I am from the Philippines. I enjoy doing outdoor activites and hanging out with my friends.
+        I love visiting the temple. Here are lists of my Favourite temples to visit. I hope you love going in the Lord's house.
+        </p>
+      <ul class="box">
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/albuquerque-new-mexico-temple?lang=eng" target="_blank"> Albuquerque New Mexico Temple</a></li>
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/abidjan-ivory-coast-temple?lang=eng" target="_blank"> Abidjan Ivory Coast Temple</a></li>
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple?lang=eng" target="_blank"> Aba Nigeria Temple</a></li>
+    
+      </ul>
     </main>
 
-    <aside>
+    <aside class="box">
+      
       <h2>Philippines</h2>
       <img src="images/ph.jpg" alt="promised isLAND">
       <p>The Philippines is an archipelago. An archipelago is a group of islands. The Philippines is divided into 3 major islands namely Luzon, Visayas and Mindanao</p>
@@ -35,4 +46,5 @@
       <p>©2023 🐱‍🏍Boyd Armor Poblete 🐱‍🏍 Philippines </p>
     </footer>
   </body>
+  
 </html>
