--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
       </nav>
     </header>
 
+    <div class= "grid">
+
     <main>
-      <h1>Boyd Armor Poblete | WDD130</h1>
+      <h1>Boyd Armor Poblete | WDD130</h1> <br>
       <img src="images/profile.jpg" alt="Hi, I'm Boyd Armor" width="200">
       <p>My name is Boyd Poblete. I am from the Philippines. I enjoy doing outdoor activites and hanging out with my friends.
         I love visiting the temple. Here are lists of my Favourite temples to visit. I hope you love going in the Lord's house.
@@ -31,7 +33,6 @@
         <li><a href="https://www.churchofjesuschrist.org/temples/details/albuquerque-new-mexico-temple?lang=eng" target="_blank"> Albuquerque New Mexico Temple</a></li>
         <li><a href="https://www.churchofjesuschrist.org/temples/details/abidjan-ivory-coast-temple?lang=eng" target="_blank"> Abidjan Ivory Coast Temple</a></li>
         <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple?lang=eng" target="_blank"> Aba Nigeria Temple</a></li>
-    
       </ul>
     </main>
 
@@ -41,6 +42,8 @@
       <p>The Philippines is an archipelago. An archipelago is a group of islands. The Philippines is divided into 3 major islands namely Luzon, Visayas and Mindanao</p>
     </aside>
 
+  </div>
+  
     <footer>
       <p>©2023 🐱‍🏍Boyd Armor Poblete 🐱‍🏍 Philippines </p>
     </footer>
