--- a/wwr/quiz.html
+++ b/wwr/quiz.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
 <title>Basic HTML and CSS Quiz</title>
 <link rel="stylesheet" href="styles/quiz.css">
@@ -10,17 +10,17 @@
     <h1>Basic HTML and CSS Quiz</h1>
     <form>
         <fieldset>
-            <label for="Question 1">1. What does the acronym CSS stand for?</label>
+            <label for="Q1">1. What does the acronym CSS stand for?</label>
             <input type="text" id="Q1" name="Q1">
-            <label for="Question 2">2. How are ID and class attributes selected in CSS?</label>
+            <label for="Q2">2. How are ID and class attributes selected in CSS?</label>
             <textarea name="Q2" id="Q2" cols="20" rows="10"></textarea>
-            <label for="Question 3">3. Which of the following is a valid CSS comment?</label> 
+            <label for="Q3">3. Which of the following is a valid CSS comment?</label> 
             <select name="Q3" id="Q3"><option value="" selected disabled>Choose One ...</option>
             <option value="With Values">With</option>
             <option value="Without Values">Without</option>
             <option value="Values">Value</option>
             </select>
-            <label for="Question 4">4. What is the bottom margin given this declaration?</label>
+            <label for="Q4">4. What is the bottom margin given this declaration?</label>
             <input type="number" id="Q4" name="Q4">
             <button type="submit">Submit Quiz</button>
         </fieldset>
