--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Page Title</title>
-<link rel="stylesheet" href="styles/contactus.css">
+<link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
 
