--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -37,15 +37,15 @@
     <section>
         <h2>Trsuted Employees</h2>
         <figure>
-          <img src="images/happy1.jpg" alt="Rafting is fun!" width="500" height="400">
+          <img src="images/happy1.jpg" alt="General Manager" width="500" height="400">
           <figcaption>General Manager</figcaption>
         </figure>
         <figure>
-            <img src="images/happy2.jpg" alt="Rafting is fun!" width="500" height="400">
+            <img src="images/happy2.jpg" alt="Assistant Manager" width="500" height="400">
             <figcaption>Assistant Manager</figcaption>
         </figure>
          <figure>
-            <img src="images/happy3.jpg" alt="Rafting is fun!" width="500" height="400">
+            <img src="images/happy3.jpg" alt="Tour Guide" width="500" height="400">
             <figcaption>Tour Guide</figcaption>
         </figure>
     </section>
