--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="About" content="Company information">
+<meta name="Contact" content="Company information">
 <title>Contact</title>
 <link rel="stylesheet" href="styles/contactus.css">
 </head>
