--- a/wwr/about.html
+++ b/wwr/about.html
@@ -33,7 +33,12 @@
 
     <section>
         <h2>History</h2>
-        <p>Historical Facts</p>
+        <p> Whitewater rafting was started by Northern Mindanao Mountaineers Society (NORMMS).
+            The group scaled mountains only twice each year and they had nothing to do most of the year.
+            As an alternative, the group decided to find some activities they can do.  
+            One of the members saw a documentary featured by Discovery Channel called A Glorious Way to Die.  
+            It was about river rafting and they were intrigued by it.  So, they tried to get as much information about river rafting.
+            They bought books, watch videos, and learned to do rafting in the river.</p>
     </section>
     <section class="three">
         <h2>Adventure Awaits You</h2>
