--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="about" content="History and purpose of the Company">
+<meta name="description" content="Poseidon's Rafting Company aims to provide the
+best water rafting experience for everyone and help them have a woderful experience">
 <title>Page Title</title>
 <link rel="stylesheet" href="styles/rafting.css">
 </head>
