--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -39,19 +39,19 @@
 <section class="trips">
   <figure>
     <img src="images/trip1.jpg" alt="Family Enjoying Rafting" width="450" height="250">
-    <figcaption>The Marañón River is a major tributary of the Amazon River, flowing from the center 
+    <figcaption>The Cagayan River is a major tributary of the Amazon River, flowing from the center 
       of Perú in a northwest direction through the Andes to turn east in the north, then turning 
       into the Ucayali River which joins to form the Amazon River.</figcaption>
   </figure>
   <figure>
     <img src="images/trip2.jpg" alt="Extreme White Water Rafting" width="450" height="250">
-    <figcaption>The Apurimac river (Speaker of the Gods) in the native Inca Language, is the most
+    <figcaption>The Sheena river (Speaker of the Gods) in the native Inca Language, is the most
       direct source of the Amazon River, making it the longest river in the world. It has different
       sections, some of them are very good for rafting.</figcaption>
   </figure>
   <figure>
     <img src="images/trip3.jpg" alt="Very Extreme White Water Rafting" width="450" height="250">
-    <figcaption>The Urubamba river runs from the high Andean ranges down through the Sacred Valley 
+    <figcaption>The Budyong river runs from the high Andean ranges down through the Sacred Valley 
       of the Incas, past Machupicchu and into the jungle. It has some exciting white water depending 
       on the section of the river being done and the time of the year.</figcaption>
   </figure>
