--- a/wwr/about.html
+++ b/wwr/about.html
@@ -16,10 +16,10 @@
     <img src="images/logo.gif" alt="Rafting Site Logo">
     <nav>
         <ul>
-            <li><a href="#">Index</a></li> 
-            <li><a href="#">About</a></li> 
-            <li><a href="#">Trips</a></li> 
-            <li><a href="#">Contact</a></li> 
+            <li><a href="https://armorboyd.github.io/wdd130/wwr/index.html">Index</a></li> 
+            <li><a href="https://armorboyd.github.io/wdd130/wwr/about.html">About</a></li> 
+            <li><a href="https://armorboyd.github.io/wdd130/wwr/trips.html">Trips</a></li> 
+            <li><a href="https://armorboyd.github.io/wdd130/wwr/contact.html">Contact</a></li> 
         </ul>
     </nav>
 </header>
