--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -8,7 +8,7 @@
             to an online booking system and for them to choose what kind of activities they
             want pursue.">
 <title>Trips</title>
-<link rel="stylesheet" href="styles/trips.css">
+<link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
 
@@ -16,16 +16,16 @@
     <img src="images/logo.gif" alt="Rafting Site Logo">
     <nav>
         <ul>
-            <li><a href="#">Index</a></li> 
-            <li><a href="#">About</a></li> 
-            <li><a href="#">Trips</a></li> 
-            <li><a href="#">Contact</a></li> 
+          <li><a href="https://armorboyd.github.io/wdd130/wwr/index.html">Index</a></li> 
+          <li><a href="https://armorboyd.github.io/wdd130/wwr/about.html">About</a></li> 
+          <li><a href="https://armorboyd.github.io/wdd130/wwr/trips.html">Trips</a></li> 
+          <li><a href="https://armorboyd.github.io/wdd130/wwr/contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
 
 <main>
-    <section class="three">
+    <section class="background">
     <h1>BOOK A TRIP</h1>
     </section>
     <section class="reservations">
