--- a/wwr/about.html
+++ b/wwr/about.html
@@ -8,7 +8,7 @@
                 to the main page, explore the beauty of rafting and for them to choose what kind of activities they
                 want pursue.">
 <title>Page Title</title>
-<link rel="stylesheet" href="styles/homesss.css">
+<link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
 
