--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -6,7 +6,7 @@
 <meta name="Author" content="Boyd Poblete">
 <meta name="description" content="The Contact Us page aims to provide visitors the location,
   contact number, and email of the company. It also has a contact form below.">
-<title>Contact</title>
+<title>Contact Us | Poseidon's Rafting Company</title>
 <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
