--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="Author" content="Boyd Poblete">
+<meta name="author" content="Boyd Poblete">
 <meta name="description" content="The Contact Us page aims to provide visitors the location,
   contact number, and email of the company. It also has a contact form below.">
 <title>Contact Us | Poseidon's Rafting Company</title>
