--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="Author" content="Boyd Poblete">
+    <meta name="author" content="Boyd Poblete">
     <meta name="description" content="The About page aims to provide visitors of to have access
                 to the main page, explore the beauty of rafting and for them to choose what kind of activities they
                 want pursue.">
