--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
     <meta name="description" content="The About page aims to provide visitors of to have access
                 to the main page, explore the beauty of rafting and for them to choose what kind of activities they
                 want pursue.">
-<title>Page Title</title>
+<title>About Us | Boyd Poblete | Poseidon's Rafting Company</title>
 <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
