--- a/wwr/index.html
+++ b/wwr/index.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="Author" content="Boyd Poblete">
+<meta name="author" content="Boyd Poblete">
 <meta name="description" content="The Home page aims to encourage visitors to view the website and
   and to have a glimpe of what the company has to offer.">
-<title>Home</title>
+<title>Home | Boyd Poblete | Poseidon's Rafting Company</title>
 <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
