--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="Author" content="Boyd Poblete">
+<meta name="author" content="Boyd Poblete">
 <meta name="description" content="The trips page aims to provide visitors of to have access
             to an online booking system and for them to choose what kind of activities they
             want pursue.">
-<title>Trips</title>
+<title>Trips | Boyd Poblete | Poseidon's Rafting Company</title>
 <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
