--- a/wwr/about.html
+++ b/wwr/about.html
@@ -69,6 +69,9 @@
         <img src="images/twit.png" alt="Tweet">
         </a>
     </nav>
+    <a href="https://app.moqups.com/ALnDuJ1IBv4GNtgbOB7wCv8xueTaQL28/view/page/ad64222d5">
+    <img src="images/wireframe3.png" alt="About Wireframe">
+  </a>
 </footer>
 
 </body>
