--- a/wwr/index.html
+++ b/wwr/index.html
@@ -73,7 +73,8 @@
         <img src="images/twit.png" alt="Tweet">
         </a>
     </nav>
-  
+  <a href="https://app.moqups.com/pGvjVDDoTOrx8sEOsW86FqMkGrjebeIS/view/page/ad64222d5">
+    <img src="images/wireframe4.png" alt="About Wireframe">
   </a>
 
 </footer>
