--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -64,7 +64,7 @@
     <label for="email">Email Address:</label>
     <input type="text" id="email" name="email" required>
     
-    <label for="purpose">Purpose of Message:</label>
+    <label for="inquiry">Purpose of Message:</label>
     <label for="inquiry">General Inquiry</label>
     <input type="radio" id="inquiry" name="purpose" value="General Inquiry" required>
     
