--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, inital-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boyd Armor Poblete | WDD130</title>
     <meta name="description" content="Welcome to Web Fundamentals. The purpose of this page is for me to pass this course with flying colours.">
     <meta name="author" content="Boyd Poblete">
